--- a/admin/src/app/components/sidebar/sidebar.component.html
+++ b/admin/src/app/components/sidebar/sidebar.component.html
@@ -18,7 +18,7 @@
 
   </header>
 
-  <aside class="cs-offcanvas cs-offcanvas-expand bg-dark" id="componentsNav">
+  <aside class="cs-offcanvas cs-offcanvas-expand bg-dark limitWidth" id="componentsNav">
     <div class="cs-offcanvas-cap d-none d-lg-block py-4">
       <a class="navbar-brand py-2" [routerLink] = "['/inicio']">
         <img src="assets/img/components/logo/logo-white.svg" alt="Createx" width="130">
