--- a/admin/src/app/components/productos/index-producto/index-producto.component.html
+++ b/admin/src/app/components/productos/index-producto/index-producto.component.html
@@ -1,13 +1,15 @@
 <app-sidebar></app-sidebar>
 
 <!-- Page title-->
-<div class="border-bottom pt-5 mt-2 mb-5">
+<div class="border-bottom mt-2 mb-5">
   <h1 class="mt-2 mt-md-4 mb-3 pt-5">Productos</h1>
   <div class="d-flex flex-wrap flex-md-nowrap justify-content-between">
     <p class="text-muted">Este módulo lista todos los productos de la tienda.</p>
     <p class="font-size-sm font-weight-medium pl-md-4">
-      <button class="btn btn-outline-primary mb-2 me-1" [routerLink]="['/panel/productos/registro']"
+      <button class="btn btn-primary mb-2 me-1" [routerLink]="['/panel/productos/registro']"
         type="button">Nuevo</button>
+      <button class="btn btn-success mb-2 me-1 ml-3" (click)="descargarExcel()"
+        type="button">Exportar</button>
     </p>
   </div>
 </div>
@@ -322,8 +324,9 @@
                               <tr>
                                 <td style="padding-top: 30px;">
                                   <p>
-                                    <img style="width: 50px; height: 50px; cursor: pointer;" [src]="url+'obtener_portada/'+item.imagen"
-                                      class="img-thumbnail" alt="Rounded image" (click)="showImagen(item.imagen)">
+                                    <img style="width: 50px; height: 50px; cursor: pointer;"
+                                      [src]="url+'obtener_portada/'+item.imagen" class="img-thumbnail"
+                                      alt="Rounded image" (click)="showImagen(item.imagen)">
                                     <label>
                                       {{item.nombre}}</label>
                                   </p>
