--- a/admin/src/app/components/productos/inventario-producto/inventario-producto.component.html
+++ b/admin/src/app/components/productos/inventario-producto/inventario-producto.component.html
@@ -8,6 +8,7 @@
       <p class="font-size-sm font-weight-medium pl-md-4">
         <button class="btn btn-outline-primary mb-2 mr-3" data-toggle="modal" [attr.data-target]="'#newInventary'" type="button">Nuevo</button>
         <button class="btn btn-outline-warning mb-2 me-1" [routerLink]="['/panel/productos']" type="button">Regresar</button>
+        <button class="btn btn-outline-success mb-2 ml-3" (click)="descargarExcel()" type="button">Exportar</button>
       </p>
     </div>
   </div>
