--- a/tienda/src/app/components/login/login.component.html
+++ b/tienda/src/app/components/login/login.component.html
@@ -86,10 +86,10 @@
             </div>
             <div class="d-flex justify-content-between align-items-center form-group">
               <div class="custom-control custom-checkbox">
-                <input type="checkbox" class="custom-control-input" id="remember-me" checked="">
-                <label for="remember-me" class="custom-control-label">Remember me</label>
+                <!--<input type="checkbox" class="custom-control-input" id="remember-me" checked="">
+                <label for="remember-me" class="custom-control-label">Remember me</label>-->
               </div>
-              <a href="#" class="font-size-sm text-decoration-none">Forgot password?</a>
+              <a href="#" class="font-size-sm text-decoration-none">Olvido su contraseña?</a>
             </div>
             <button type="submit" class="btn btn-primary btn-block">Sign in</button>
           </form>
