--- a/tienda/src/app/components/productos/index-producto/index-producto.component.html
+++ b/tienda/src/app/components/productos/index-producto/index-producto.component.html
@@ -115,9 +115,9 @@
               <div class="collapse show" id="filter" aria-labelledby="filter-panel">
                 <div class="cs-widget pl-1 pb-4 mt-n3">
                   <div class="input-group-overlay d-lg-block d-none order-lg-3 mt-3">
-                    <input class="form-control appended-form-control" type="text" placeholder="Buscar producto" name="filter_producto" [(ngModel)]="filter_producto">
+                    <input class="form-control appended-form-control" type="text" placeholder="Buscar producto" name="filter_producto" [(ngModel)]="filter_producto.titulo">
                     <div class="input-group-append-overlay" style="cursor:pointer; color:white !important; background: #17696a !important;"
-                    (click)="buscar_producto()">
+                    (click)="buscar_producto('titulo')">
                       <span class="input-group-text" style="color: white;"><i class="cxi-search lead align-middle"></i></span>
                     </div>
                   </div>
@@ -172,17 +172,17 @@
               <div class="collapse show" id="price" aria-labelledby="price-panel">
                 <div class="cs-widget pl-1 pr-3 pb-4 mt-n3">
                   <div class="cs-range-slider" data-start-min="250" data-start-max="680" data-min="0" data-max="1000" data-step="1">
-                    <div class="cs-range-slider-ui" id="slider"></div>
+                    <div class="cs-range-slider-ui" id="slider" (click)="buscar_producto('precio')"></div>
                     <div class="d-flex align-items-center mt-3">
                       <div class="w-50">
                         <div class="form-group position-relative mb-0">
-                          <input type="number" class="form-control form-control-sm cs-range-slider-value-min">
+                          <input type="number" name="minPrice" [(ngModel)]="filter_producto.minPrice" class="form-control form-control-sm cs-range-slider-value-min">
                         </div>
                       </div>
                       <div class="mx-1 px-2 font-size-xs">—</div>
                       <div class="w-50">
                         <div class="form-group position-relative mb-0">
-                          <input type="number" class="form-control form-control-sm cs-range-slider-value-max">
+                          <input type="number" name="maxPrice" [(ngModel)]="filter_producto.maxPrice" (change)="actualizarPrecio('max')" class="form-control form-control-sm cs-range-slider-value-max">
                         </div>
                       </div>
                     </div>
