--- a/tienda/src/app/components/productos/index-producto/index-producto.component.html
+++ b/tienda/src/app/components/productos/index-producto/index-producto.component.html
@@ -117,7 +117,7 @@
                   <div class="input-group-overlay d-lg-block d-none order-lg-3 mt-3">
                     <input class="form-control appended-form-control" type="text" placeholder="Buscar producto" name="filter_producto" [(ngModel)]="filter_producto.titulo">
                     <div class="input-group-append-overlay" style="cursor:pointer; color:white !important; background: #17696a !important;"
-                    (click)="buscar_producto('titulo')">
+                    (click)="buscar_producto()">
                       <span class="input-group-text" style="color: white;"><i class="cxi-search lead align-middle"></i></span>
                     </div>
                   </div>
