Revert "Se quito para que arriba no sea dropdown de productos"
This reverts commit d439b24b7461bc91ac3312679a1b427b30e93ac0.

--- a/tienda/src/app/components/nav/nav.component.html
+++ b/tienda/src/app/components/nav/nav.component.html
@@ -80,8 +80,12 @@
             <a [routerLink]="['/']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
               class="nav-link">Inicio</a>
           </li>
-          <li class="nav-item">
-            <a [routerLink]="['/productos']" routerLinkActive="active" class="nav-link">Tienda</a>
+          <li class="nav-item dropdown">
+            <a [routerLink]="['/productos']" routerLinkActive="active" class="nav-link dropdown-toggle" data-toggle="dropdown">Tienda</a>
+            <ul class="dropdown-menu">
+              <li *ngFor="let item of config_global.categorias"><a href="shop-catalog.html" class="dropdown-item"><i class="{{item.icono}}"></i> &nbsp; {{item.titulo}}</a></li>
+
+            </ul>
           </li>
           <li class="nav-item dropdown mega-dropdown">
             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Megamenu</a>
