Detalles de vista de productos

--- a/tienda/src/app/components/productos/index-producto/index-producto.component.html
+++ b/tienda/src/app/components/productos/index-producto/index-producto.component.html
@@ -12,8 +12,6 @@
     </div>
   </nav>
   <section class="container pt-3 pb-5 pb-md-6 mb-2 mb-lg-0">
-
-
     <!-- Toolbar + Pagination -->
     <div class="row mb-4 pb-2">
       <div class="col-md-3 pr-lg-4 mb-3 mb-md-0">
@@ -180,7 +178,7 @@
           <div class="col pb-sm-2 mb-grid-gutter" *ngFor="let item of productos_filtrado | paginate: { itemsPerPage: pageSize, currentPage: page }">
             <div class="card card-product mx-auto">
               <div class="card-product-img">
-                <a href="shop-single.html" class="card-img-top">
+                <a [routerLink]="['/productos/', item.slug]" routerLinkActive="router-link-active"  class="card-img-top">
                   <img [src]="url+'obtener_portada/'+item.portada" alt="Product image">
                 </a>
                 <div class="card-product-widgets-top">
@@ -198,7 +196,7 @@
               </div>
               <div class="card-body pb-2">
                 <h3 class="card-product-title text-truncate mb-2">
-                  <a href="shop-single.html" class="nav-link">{{item.titulo}}</a>
+                  <a [routerLink]="['/productos/', item.slug]" class="nav-link">{{item.titulo}}</a>
                 </h3>
                 <div class="d-flex align-items-center">
                   <span class="h5 d-inline-block mb-0">${{item.precio}}</span>
@@ -251,3 +249,5 @@
     </div>
   </section>
 </main>
+
+<app-footer></app-footer>
